--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "next build"
+    "build": "next build && next export"
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
