--- a/web/package.json
+++ b/web/package.json
@@ -11,12 +11,20 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
+    "@rest-hooks/rest": "^2.0.4",
+    "@types/date-fns": "^2.6.0",
+    "@types/use-persisted-state": "^0.3.0",
     "@xstyled/emotion": "^2.4.1",
     "@xstyled/util": "^2.2.3",
+    "date-fns": "^2.19.0",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.3"
+    "react-hook-form": "^7.0.0",
+    "rest-hooks": "^5.0.16",
+    "superstruct": "^0.15.1",
+    "typescript": "^4.2.3",
+    "use-persisted-state": "^0.3.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
