--- a/api/index.yaml
+++ b/api/index.yaml
@@ -2,5 +2,5 @@ indexes:
   - kind: post
     properties:
       - name: user_id
-      - name: created_at
+      - name: updated_at
         direction: desc
