--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,16 @@
 runtime: python39
-entrypoint: api/main.py
 handlers:
-  - url: /static
-    static_dir: static
-
-  - url: /.*
+  - url: /api/.*
     script: auto
+
+  - url: /
+    static_files: web/out/index.html
+    upload: web/out/index.html
+
+  - url: /(register|login|user)
+    static_files: web/out/\1.html
+    upload: web/out/(.*)\.html
+
+  - url: /(.*)
+    static_files: web/out/\1
+    upload: web/out/(.*)
